# metamath-prelude

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: SETMM_PRELUDE_1_648.md
src/prelude/: __init__.py  axioms.py  build.py  formula.py  hilbert_rules.py  language.py  metamath_binding.py  notation.py  structures.py
tests/: test_smoke.py
