[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamath-prelude"
version = "0.0.2"
description = "Prelude definitions for Metamath projects"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-2.0-or-later"

keywords = ["metamath", "proof", "proof-scaffold"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]

authors = [
  { name = "Mingli Yuan", email = "mingli.yuan@gmail.com" }
]

maintainers = [
  { name = "Mingli Yuan", email = "mingli.yuan@gmail.com" }
]

dependencies = [
    "proof-scaffold==0.0.5",
]

[project.urls]
Homepage = "https://github.com/epistemic-frontier/metamath-prelude"
Repository = "https://github.com/epistemic-frontier/metamath-prelude"
Issues = "https://github.com/epistemic-frontier/metamath-prelude/issues"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["skfd.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
